--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  ltsc2022:
+  build:
     strategy:
       matrix:
         WIN_VER: ["2022", "2019"]
@@ -42,3 +42,14 @@ jobs:
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey --all-tags
         docker push ghcr.io/${{ github.repository_owner }}/chocolatey --all-tags
+
+  trigger-next-workflow:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Trigger next workflow (visualstudio-build-tools-docker)
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          workflow: docker-image.yml
+          repo: amitie10g/visualstudio-build-tools-docker
+          token: ${{ secrets.VISUALSTUDIO_BUILD_TOOLS_DOCKER }}
