--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,8 +34,9 @@ jobs:
     - name: Build
       run: >
         docker build --build-arg WIN_VER=${{ matrix.WIN_VER }}
-        -t ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.WIN_VER }}
-        -t ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }}
+        --tag=${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.WIN_VER }}
+        --tag=ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }}
+        --isolation=hyperv
         .
     - name: Tag latest
       if: ${{ strategy.job-index == 0 }}
