--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,14 @@ on:
 
 jobs:
   build:
+    env:
+      WIN_VER_LATEST: ltsc2022
     strategy:
       fail-fast: false
       matrix:
         WIN_VER:
-        - ltsc2022
         - ltsc2025
+        - ltsc2022
         - ltsc2019
         - ltsc2016
     runs-on: windows-2025
@@ -40,7 +42,7 @@ jobs:
         --isolation=hyperv
         .
     - name: Tag latest
-      if: ${{ matrix.WIN_VER == matrix.WIN_VER[0] }}
+      if: ${{ matrix.WIN_VER == env.WIN_VER_LATEST }}
       run: |
         docker tag ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.WIN_VER }} ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey
         docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }} ghcr.io/${{ github.repository_owner }}/chocolatey
