--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,34 +13,34 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - BASE_IMAGE: dotnet/nightly/runtime
+        - WIN_VER: ltsc2025
+          BASE_IMAGE: dotnet/nightly/runtime
           DOTNET_VERSION: 9.0
-          WIN_VER: ltsc2025
-        - BASE_IMAGE: dotnet/runtime
+        - WIN_VER: ltsc2022
+          BASE_IMAGE: dotnet/runtime
           DOTNET_VERSION: 9.0
-          WIN_VER: ltsc2022
-        - BASE_IMAGE: dotnet/runtime
+        - WIN_VER: ltsc2019
+          BASE_IMAGE: dotnet/runtime
           DOTNET_VERSION: 9.0
-          WIN_VER: ltsc2019
-        - BASE_IMAGE: dotnet/framework/runtime
+        - WIN_VER: 20H2
+          BASE_IMAGE: dotnet/framework/runtime
           DOTNET_VERSION: 4.8
-          WIN_VER: 20H2
-        - BASE_IMAGE: dotnet/framework/runtime
+        - WIN_VER: 2009
+          BASE_IMAGE: dotnet/framework/runtime
           DOTNET_VERSION: 4.8
-          WIN_VER: 2009
-        - BASE_IMAGE: dotnet/framework/runtime
+        - WIN_VER: 2004
+          BASE_IMAGE: dotnet/framework/runtime
           DOTNET_VERSION: 4.8
-          WIN_VER: 2004
-        - BASE_IMAGE: dotnet/framework/runtime
+        - WIN_VER: 1909
+          BASE_IMAGE: dotnet/framework/runtime
           DOTNET_VERSION: 4.8
-          WIN_VER: 1909
-        - BASE_IMAGE: dotnet/framework/runtime
+        - WIN_VER: 1903
+          BASE_IMAGE: dotnet/framework/runtime
           DOTNET_VERSION: 4.8
-          WIN_VER: 1903
-        - BASE_IMAGE: dotnet/framework/runtime
+        - WIN_VER: 1803
+          BASE_IMAGE: dotnet/framework/runtime
           DOTNET_VERSION: 4.8
-          WIN_VER: 1803
-          
+
     runs-on: windows-2025
     steps:
     - name: Checkout
