--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,17 +47,20 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Login to GHCR
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Build
       run: >
         docker build
@@ -68,52 +71,27 @@ jobs:
         --tag=ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }}
         --isolation=hyperv
         .
+
     - name: Tag latest
       if: ${{ matrix.WIN_VER == env.WIN_VER_LATEST }}
       run: |
         docker tag ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.WIN_VER }} ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey
         docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }} ghcr.io/${{ github.repository_owner }}/chocolatey
+
+    - name: Tag same images (20H2 -> 2009)
+      if: ${{ matrix.WIN_VER == 20H2 }}
+      run: |
+        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.WIN_VER }} ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:2009
+        docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }} ghcr.io/${{ github.repository_owner }}/chocolatey:2009
+
     - name: push
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey --all-tags
         docker push ghcr.io/${{ github.repository_owner }}/chocolatey --all-tags
 
-  tag-same-images:
-    needs: build
-    runs-on: windows-2025
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - SOURCE: 20H2
-          TARGET: 2009
-    steps:
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Login to GHCR
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Pull
-      run: |
-        docker pull ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.SOURCE }}
-    - name: Tag
-      run: |
-        docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.SOURCE }} ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.TARGET }}
-        docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.SOURCE }} ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.TARGET }}
-    - name: Push
-      run: |
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.TARGET }}
-        docker push ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.TARGET }}
-
   trigger-next-workflow:
     runs-on: ubuntu-latest
-    needs: tag-same-images
+    needs: build
     steps:
       - name: Trigger next workflow (visualstudio-build-tools-docker)
         uses: benc-uk/workflow-dispatch@v1
