--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -79,7 +79,7 @@ jobs:
         docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }} ghcr.io/${{ github.repository_owner }}/chocolatey
 
     - name: Tag same images (20H2 -> 2009)
-      if: ${{ matrix.WIN_VER == "20H2" }}
+      if: ${{ matrix.WIN_VER == '20H2' }}
       run: |
         docker tag ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:${{ matrix.WIN_VER }} ${{ secrets.DOCKERHUB_USERNAME }}/chocolatey:2009
         docker tag ghcr.io/${{ github.repository_owner }}/chocolatey:${{ matrix.WIN_VER }} ghcr.io/${{ github.repository_owner }}/chocolatey:2009
