--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,4 +18,4 @@ jobs:
           }
         }
     - name: Get Docker home
-      run: dir C:\ProgramData\docker
+      run: C:\ProgramData\docker\config
